# weft

./: .gitignore  .pytest_shortcuts.sh  AGENTS.md  LICENSE  README.md  guide.md  pyproject.toml
agent_mesh/: __init__.py  __main__.py  cli.py  doctor.py  mcp_server.py  types.py  workspace.py
agent_mesh/pipelines/: review.py
agent_mesh/runners/: __init__.py  base.py  claude.py  codex.py  gemini.py
demos/: README.md  claude_calls_codex.sh  codex_calls_claude.sh
docs/specs/: agent-mesh.md
tests/: E2E_TEST_REPORT.md  README.md  __init__.py  test_cli_help.py  test_e2e.py  test_mcp_server.py  test_types.py
